--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev -p 5000",
+    "dev": "next dev -p 5001",
     "build": "next build",
-    "start": "next start -p 5000",
+    "start": "next start -p 5001",
     "lint": "next lint"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
     "autoprefixer": "^10.4.21",
+    "expo": "^53.0.20",
     "next": "^15.4.6",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
